--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </nav>
 
     <!-- alert -->
-    <div class="validation-summary-errors alert alert-danger display-none">
+    <!-- <div class="validation-summary-errors alert alert-danger display-none">
       <ul>
         <li><strong>Login Failed</strong> - Please check your details.</li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- Login section -->
     <section class="container-section row container-fluid">
@@ -50,7 +50,9 @@
         </div>
       </div>
     </section>
-    
+    <footer class="footer bg-primary">
+      <p>MyFlexQuery v1.24 &nbsp;-&nbsp; Copyright &copy; 2020 &nbsp;-&nbsp; Retail IQ Ltd</p>
+    </footer>
     <!-- Bootstrap javaScript links -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
